Fixes after JN review (Flash intead of validation for signup and internal button no wrap)

--- a/frontend/app/less/branding/infotextinput.less
+++ b/frontend/app/less/branding/infotextinput.less
@@ -92,7 +92,8 @@
       float:right;
       text-decoration: bold;
       width: auto;
-
+      white-space: nowrap;
+      
       &:hover {
         background: #cfcfcf;
       }
